--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,6 +28,9 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 60 9.1% 97.8%;
 
+    --warning: 45 90.2% 49.4%;
+    --warning-foreground: 60 9.1% 97.8%;
+
     --border: 20 5.9% 90%;
     --input: 20 5.9% 90%;
     --ring: 20 14.3% 4.1%;
@@ -59,6 +62,9 @@
  
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 60 9.1% 97.8%;
+
+    --warning: 45 75.2% 55.4%;
+    --warning-foreground: 60 9.1% 97.8%;
  
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
